ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: tripviewer.07736aa755134549b7fd.northeurope.aksapp.io
    http:
      paths:
      - path: /api/trips
        pathType: Prefix
        backend:
          service: 
            name: trips-service
            port: 
              number: 80
      - path: /api/poi
        pathType: Prefix
        backend:
          service: 
            name: poi-service
            port: 
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service: 
            name: user-java-service
            port: 
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service: 
            name: userprofile-service
            port: 
              number: 80
