monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: tripviewer.07736aa755134549b7fd.northeurope.aksapp.io
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service: 
            name: grafana
            port: 
              number: 3000
      - path: /prometeus
        pathType: Prefix
        backend:
          service: 
            name: prometeus-k8s
            port: 
              number: 9090
