tripviewer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: tripviewer.07736aa755134549b7fd.northeurope.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: tripviewer-service
            port: 
              number: 80
